paper/manuscript-v1/checkpoints/v5/source/chapters/06-p3.md
# 问题三：安排计算顺序并利用共享只读Cache

## 共享只读缓存的访问规则与硬件时序

问题三在问题二的多核心硬件任务（Task）合并执行模型基础上，引入了全部计算核心共享的片上只读缓存（Shared Read-only Cache，后文简称为 Cache）。该 Cache 容量固定为 1 MiB（$1{,}048{,}576$ 字节），只读缓存命中读取总带宽为 250 B/cycle。在这一设定下，各个计算核心除了访问各自片上私有的 L1 Buffer 与 Unified Buffer（UB）之外，还可以通过该共享 Cache 存取跨核心共享的只读数据，以减少访问外部主存（DDR，所有并发 DDR 传输共享总带宽为 60 B/cycle）带来的时钟周期开销。

依据官方评测程序的具体实现，共享只读 Cache 的访问行为与状态迁移严格遵循如下规则：

1. **查询时机与命中判定**：当某个核心启动数据搬入操作 `COPY_IN`、能够确定待搬入张量的全局逻辑标识且数据大小大于 0 字节时，该操作在启动时刻立即向 Cache 发起查询。若 Cache 中已存在该逻辑标识对应的数据块，则判定为**缓存命中**（cache hit），数据直接经由 Cache 读入该核心的片上私有缓存，数据传输速率受 Cache 带宽限制；若 Cache 中不存在该数据，则判定为**缓存未命中**（cache miss），核心必须向片外 DDR 发起读取请求。
2. **数据插入与在途约束**：当发生缓存未命中时，数据通过 DDR 链路进行搬运，并受系统共享总带宽（60 B/cycle）及并发链路仲裁约束。**数据仅在 DDR 搬运彻底完成的时刻，方被正式写入并插入 Cache**。若某个张量正在由其他核心从 DDR 读取中（传输尚未结束），后继核心发起的相同张量读取请求由于 Cache 中尚无完整有效副本，无法被判定为命中，依然作为未命中处理；
3. **先入先出替换策略（FIFO）**：当 Cache 当前占用总字节数与待插入张量大小之和超过容量上限（1 MiB）时，Cache 依据各数据块的首次插入时间先后顺序（通过有序队列维护并按占用总字节数进行容量控制），依次逐出最早存入的数据块，直至释放出足够的总字节容量以容纳新张量。该共享只读缓存仅对总字节数进行总量控制，不涉及物理地址连续性或碎片约束，并非核心私有的 L1/UB 物理分配器。**缓存命中操作不会更新或刷新该数据块的入队时间戳，亦不改变其在 FIFO 队列中的淘汰顺序**；
4. **超大张量不插入规则**：对于单份数据大小严格超过 Cache 总容量（1 MiB）的张量，系统直接通过 DDR 链路完成搬运，绝不尝试将其写入 Cache，以避免无意义地清空 Cache 中已有的其他活跃数据；
5. **硬件同步与数据依赖不变性**：共享 Cache 的引入并未免除计算图原有的前序数据依赖约束，亦未消除跨核心数据传递时必须满足的 500 cycles 硬件同步等待。即使后继核心从 Cache 中命中了前序算子生成的数据，该读取操作依然必须在前序算子写出操作完成 500 cycles 之后方可启动。

上述时序规则表明，调度算法排定的算子执行顺序直接决定了各张量读取请求在时间轴上的先后位置。由于 Cache 具有容量上限与 FIFO 逐出机制，单纯统计静态命中次数或总命中字节数，并不能直接反映程序完成时间（Makespan）的变化趋势。

::: figure-plan {#fig-cache-story}
根据case_021、3 Core的官方事件，列出编译后张量t1000000001的四次事件：0时未命中，207时传输完成并插入，4956时读取命中，323850时因插入t1000000487被移除。该张量4096 B。单位cycle。FIFO命中不改插入顺序。
:::

根据 `case_021` 在 3 核心配置下的官方离散事件仿真记录，张量 `t1000000001`（数据大小为 4096 B）的生命周期呈现了典型的 Cache 状态迁移过程：在第 0 cycle，核心 0 的 `COPY_IN` 操作启动，发生缓存未命中；在第 207 cycle，DDR 传输完成，该张量被正式插入 Cache；在第 4956 cycle，核心 2 执行 `COPY_IN` 操作，成功判定为缓存命中并从 Cache 读取；在第 323850 cycle，核心 2 插入新张量 `t1000000487`（大小为 6144 B）导致容量不足，该张量按照 FIFO 规则被逐出 Cache。

## 树状计算结构与数据存储峰值

在多核心调度过程中，除了跨核心通信与只读缓存优化外，各个计算核心内部的算子执行次序对片上私有存储的驻留峰值具有决定性影响。

考虑由同一父算子汇聚的两个互不依赖的计算分支（子树）A 与 B。父算子必须等待 A 与 B 的全部计算操作执行完毕，方可读取两者的输出张量以执行归约计算。若算法选择先执行分支 A，则分支 A 计算完成后生成的输出张量不能立即释放，必须持续驻留在片上存储中，直至分支 B 完整执行完毕且父算子完成读取。此时，分支 A 的输出数据将与分支 B 在计算过程中产生的各类活跃中间张量产生空间共存。反之，若算法选择先执行分支 B，片上存储在各个时刻所保留的数据量将发生改变。

为了量化不同子树执行次序对存储占用的影响，我们首先定义一类基础的**树状计算结构**模型：

1. 结构仅包含单棵归约树内部的算子，每个算子仅生成一个确定大小的输出张量；
2. 每个内部算子的输出张量仅被其唯一的父算子读取，不被外部其他分支复用；
3. 子树之间采用非交错（non-interleaved）方式执行，即完整处理完一棵子树的全部算子后，方开始执行下一棵子树；
4. 存储分配语义满足：**父算子的输出张量存储空间必须在子算子的输出张量被完全释放之前分配**。

对于子树 $i$，定义 $h_i$ 为完整执行该子树期间内部计算结果所占用的最大存储总字节数（存储峰值），定义 $r_i$ 为该子树全部执行完成后必须持久保留的根节点输出总字节数。在此模型下，各数值满足物理约束 $h_i \ge r_i \ge 0$。模型仅统计该子树内部生成并保留的数据张量，不包含全图外部输入，亦不细分 L1 Buffer 与 UB 的独立物理边界。

以包含两个分支 A、B 的数学设定为例进行说明：设分支 A 的参数为 $(h_A, r_A) = (8, 2)\text{ KiB}$，分支 B 的参数为 $(h_B, r_B) = (7, 5)\text{ KiB}$，父算子自身的输出大小为 $r_{\mathrm{parent}} = 3\text{ KiB}$。

若按“先 A 后 B”的顺序执行：
1. 执行分支 A 期间，内部存储峰值为 $8\text{ KiB}$；
2. 分支 A 执行完成，保留输出 $2\text{ KiB}$；随后执行分支 B，由于分支 B 自身内部峰值为 $7\text{ KiB}$，此时片上存储峰值为 $2 + 7 = 9\text{ KiB}$；
3. 分支 B 执行完成，保留输出 $5\text{ KiB}$，与分支 A 保留的 $2\text{ KiB}$ 合计占用 $7\text{ KiB}$。在父算子启动计算时，先分配父算子输出 $3\text{ KiB}$，此时总存储占用达到 $2 + 5 + 3 = 10\text{ KiB}$；随后父算子读取并释放 A 与 B 的输入数据。

整个流程中的最大存储占用峰值为 $\max(8, 9, 10) = 10\text{ KiB}$。

反之，若按“先 B 后 A”的顺序执行：
1. 执行分支 B 期间，内部存储峰值为 $7\text{ KiB}$；
2. 分支 B 执行完成，保留输出 $5\text{ KiB}$；随后执行分支 A，片上存储峰值上升至 $5 + 8 = 13\text{ KiB}$；
3. 分支 A 执行完成，两分支输出合计 $7\text{ KiB}$，分配父算子输出时达到 $5 + 2 + 3 = 10\text{ KiB}$。

该顺序下的最大存储占用峰值为 $\max(7, 13, 10) = 13\text{ KiB}$。对比可见，调整非交错子树的执行先后次序，使存储峰值在 $10\text{ KiB}$ 与 $13\text{ KiB}$ 之间产生了显著差异。

::: figure-plan {#fig-forest-frontier}
把正文的A、B示例画为同一棵树和两种处理顺序。精确堆叠柱由代码生成，依次表示此前留下的结果、当前子树占用、父输出；A后B峰值10 KiB，B后A峰值13 KiB。横轴为处理步骤，不使用时间单位，使用正文已定义的字节量。
:::

## 非交错子树处理的最优顺序及证明

设某个父算子拥有 $m$ 棵待处理的子树，记 $\pi = (\pi_1, \pi_2, \dots, \pi_m)$ 为这 $m$ 棵子树的一个非交错处理排列次序，父算子自身输出张量大小记为 $r_{\mathrm{parent}}$。

在排列 $\pi$ 下，当算法开始处理第 $j$ 棵子树 $\pi_j$ 时，前面已经处理完毕的 $j - 1$ 棵子树所保留的根节点输出已累计占用 $\sum_{\ell < j} r_{\pi_\ell}$ 字节，而处理当前子树 $\pi_j$ 额外需要的最大内部临时存储为 $h_{\pi_j}$ 字节；当全部 $m$ 棵子树均处理完毕、父算子开始分配自身输出张量时，所有子树的输出尚未被释放，此时存储占用为 $\sum_{i=1}^m r_i + r_{\mathrm{parent}}$ 字节。因此，排列 $\pi$ 对应的全局存储峰值函数 $H(\pi)$ 精确表示为：

$$H(\pi) = \max \left\{ \max_{1 \le j \le m} \left( \sum_{\ell < j} r_{\pi_\ell} + h_{\pi_j} \right), \ \sum_{i=1}^m r_i + r_{\mathrm{parent}} \right\}.$$

该式中各项的物理单位均为字节（B）。

**命题6.1（子树存储最优排序）。** 若对所有子树均有 $h_i \ge r_i \ge 0$，则在上述非交错执行且父输出先分配的模型中，将子树按照指标差值 $h_i - r_i$ 从大到小降序排列，能够使全局存储峰值 $H(\pi)$ 取得最小值。

**证明。** 考虑排列中任意两个相邻的子树 A 与 B，设在当前序列中 A 紧邻且位于 B 之前。假设两者的指标满足 $h_A - r_A \ge h_B - r_B$。

在计算峰值时，暂时不考虑在处理 A 之前已经保留在存储中的其他前序子树输出常量 $R_{\mathrm{prev}} = \sum_{\ell < \operatorname{pos}(A)} r_{\pi_\ell}$。若按“先 A 后 B”的相对顺序执行，这两步操作期间局部达到的最大存储占用为：

$$H_{AB} = \max(h_A, \ r_A + h_B).$$

若将 A 与 B 的执行顺序对调为“先 B 后 A”，对应的局部最大存储占用为：

$$H_{BA} = \max(h_B, \ r_B + h_A).$$

由假设条件 $h_A - r_A \ge h_B - r_B$ 移项可得：

$$r_A + h_B \le r_B + h_A.$$

同时，由于物理保留量非负（$r_B \ge 0$）且子树内部峰值不小于保留量（$h_A \ge r_A \ge 0$），显然有：

$$h_A \le r_B + h_A.$$

综合上述两式，可得：

$$H_{AB} = \max(h_A, \ r_A + h_B) \le r_B + h_A \le \max(h_B, \ r_B + h_A) = H_{BA}.$$

前序已保留的常量 $R_{\mathrm{prev}}$ 对两种次序的每一项产生完全相同的线性位移，不改变不等关系。并且，当 A 与 B 均处理完毕后，两者留在存储中的数据总和恒为 $r_A + r_B$，对后续其他子树的处理过程以及父算子输出 $r_{\mathrm{parent}}$ 的分配不产生任何状态影响。

因此，若某个排列中存在相邻子树不满足 $h_i - r_i$ 降序，将其交换位置绝不会导致全局存储峰值 $H(\pi)$ 增大。通过有限次相邻逆序对的对调操作，任意排列均可转化为按 $h_i - r_i$ 单调递减排列，且其峰值不增。自底向上递推应用于整棵树的各个归约节点，即证该贪心排列能够使模型内的存储峰值达到最优。 $\square$

该证明借鉴了经典树表达式代码生成与存储优化思想[4]，并在本文所述的限定模型下给出了按字节度量存储占用的相邻交换证明。

需要强调的是，命题 6.1 证明的最优性受到严格的**模型适用边界**约束：
1. 结论仅适用于单棵孤立归约树、内部纯张量数据依赖、子树非交错处理的理想化模型；
2. 该模型未考虑多核之间的并行交错、外部输入张量的重叠生命周期、L1 Buffer 与 UB 的独立物理容量分割；
3. 该模型所得的标量存储峰值是用于指导排序的启发式代理（ordering proxy），它**并不等价于**官方底层编译流程中绝对不发生 Step 2 缓存换入换出（spill），亦**不直接等价于**离散事件仿真器推进下的多核 Makespan 最优。近期关于峰值内存调度的理论研究表明，面向一般有向无环图寻求支配调度或保持局部最优的拓扑线性化，需要特定的结构隔离条件[10]；本文针对非交错归约树给出的 $h_i - r_i$ 交换证明受限于单树模型，不外推为多流水线、动态 FIFO Cache 与完整 Makespan 的全局最优解。

## 森林调度实现的结构守卫与核心归属

在算法实现中，为了将上述单树排序理论应用于输入计算图，程序构建了带有结构守卫的森林内存排序模块（`forest_memory_order.py`）。该模块并不假定所有输入图均能匹配树状模型，而是在进入优化前执行严密的结构验证。

### 结构守卫与实现接受条件

在本算法实现中，森林内存排序模块（`forest_memory_order.py`）针对输入计算图设定了明确的工程接受条件（guard conditions）。这些条件界定了当前代码所支持的结构范围，并非归约森林在数学图论上的充要定义：

1. **多连通分量要求**：计算图在收缩边界 `COPY` 节点后的计算依赖图中，其无向连通分量数量必须至少为 2（`len(index.components) >= 2`）；
2. **各分量单一归约根**：每个连通分量内部必须构成一棵有向树，且每个分量包含且仅包含一个没有计算后继算子的根算子（root op）；
3. **汇合节点存在性**：整张计算图中必须至少存在一个拥有 2 个及以上前序输入算子的汇聚算子（join op，`joined_nodes >= 1`）；
4. **计算出度无分叉**：除根节点外部输出外，所有计算算子的计算后继算子数量至多为 1（无 fanout，`outdegree <= 1`）；
5. **张量属性与唯一性**：计算图中所有张量具备已知的非负整数尺寸，且每个计算算子恰好生成一个内部输出张量；
6. **边界搬运严格规范**：计算图仅包含合法的边界 `COPY_IN` 与 `COPY_OUT` 算子，其中 `COPY_IN` 必须将 DDR 外部输入映射为 L1 片上输入，`COPY_OUT` 必须将根算子的 L1 输出写回 DDR，且输入输出张量大小完全一致；
7. **不支持直接算子依赖边**：若计算图中包含直接算子依赖边（direct op-op edges），由于无法确定对应的数据字节大小，模块将其视为超出当前排序实现范围的不支持结构，主动抛出异常（`UnsupportedStructure`）。

上述结构守卫明确了本实现的工程支持边界；满足上述条件的输入图仍须经受实际评测的检验，算法不宣称满足这些条件即与全部底层硬件容量特征严密对应。

### 核心归属与遍历次序生成

在通过上述结构检验后，算法并不打破或重新搜索算子的计算核心分配，而是**严格保留由基准索引确定的核心归属映射（`index.assignment(cores)`）**。

算法以各连通分量为独立单元，自底向上递归计算各算子的 $(h_u, r_u)$ 属性，在每个汇聚节点处将前序子节点按 $h_i - r_i$ 降序排序（相同指标下按算子 ID 破平）。随后，通过深度优先后序遍历（DFS postorder）为每个树分量生成算子执行序列。最后，在每个计算核心内部，将指派给该核心的各分量序列按照分量最小算子 ID 依次拼接，构造出满足单操作子图约束的候选调度方案。

## 求解流水线与候选守卫机制

在问题三的整体算法架构中，求解器继承并扩展了前序研发积累的流水线链条，形成了一条清晰的递进式父子演化链条：

$$\text{calendar\_solve} \longrightarrow \text{pipeline\_solve} \longrightarrow \text{witness\_solve} \longrightarrow \text{forest\_solve}.$$

各层求解器通过分层守卫机制依次尝试不同的调度构型，并将全部尝试约束在统一的评测调用账本之下。

### 递进式求解链条与候选生成

1. **`calendar_solve`**：在问题二空闲区间调度的基础上，引入单核单操作子图的保底锚点（anchor），并针对大模型注意力计算（attention route）尝试构造基于 gap 的核心放置方案；
2. **`pipeline_solve`**：调用 `calendar_solve` 获得基准方案后，针对多核场景下的共享输入流水线结构，构造一种连续极小化极大划分（contiguous minimax partition）候选；
3. **`witness_solve`**：调用 `pipeline_solve` 获得前序最优方案后，若注意力计算路线在重新排序后评估代理变差，则生成一份保留原放置见证的候选方案（attention witness）；
4. **`forest_solve`**：作为顶层求解模块，首先完整调用 `witness_solve` 获取当前已知最优方案（incumbent winner）。若满足归约森林结构守卫，则生成基于本章树排序理论的 `forest_memory_order` 候选方案。

### 预算共用与终止状态分类

整个求解流程在单次运行时**严格共用至多 3 次官方 E0 在线评测预算（`total_e0_limit = 3`）**。在 `forest_solve` 阶段，系统对候选方案的状态转移实施精细化管理：

1. **预算耗尽跳过（`skip: three_call_budget_already_used`）**：若前序父求解器（如 calendar、pipeline、witness）已累计发起了 3 次评测请求，则当前阶段不再生成亦不再评测 forest 候选方案，直接输出当前最优方案；
2. **结构不支持跳过（`skip: UnsupportedStructure`）**：若输入计算图不满足归约森林的结构守卫，模块安全捕获异常并跳过，保持当前方案输出；
3. **方案完全重复（`duplicate`）**：若生成的 `forest_memory_order` 方案与当前最优方案的代码表示完全一致，则记录为重复状态，不发起重复评测；
4. **完成时间下界剪枝（`bound_pruned`）**：对生成的候选方案求解其不可避免的物理完成时间下界 $L$。若 $L \ge U$（$U$ 为当前已知最优方案的官方 Makespan），则该候选在数学上绝无可能超越当前最优解，算法直接放弃评测；
5. **下界不支持但允许评测（`UnsupportedBound`）**：若候选方案超出下界分析模块支持的范畴，系统仅记录 `bound_unavailable`，**绝不直接拒绝候选方案**，依然允许其进入后续评测流程；
6. **严格选优准则**：仅当候选方案通过官方评测且其最终 Makespan 严格小于当前最优解（$M < U$）时，方接受该方案并替换为新的最优解。**在问题三的决策逻辑中，不使用 DDR 搬运量进行平局决选（tie-break）**。

## 固定候选方案的完成时间下界

为了在发起昂贵的官方评测之前安全剔除无希望的候选方案，算法设计了针对静态调度方案的完成时间下界分析器（`pipe_bound.py`）。

### 下界模型的构造、守卫条件与数学形式

该分析器（`pipe_bound.py`）针对已完全排定次序的静态调度方案生效，其适用范围受如下守卫条件（guards）严格约束：

1. **算子与流水线范围**：每个子图必须恰好包含一个原始非 COPY 算子，且所有计算算子的流水线类型仅限 `PIPE_M` 与 `PIPE_V`；
2. **计算周期非负整数**：算子计算时长满足 $d_u = \max(1, \text{cycles}_u)$，其中原始 $\text{cycles}_u$ 必须为非负整数；
3. **依赖提取与保守拒绝**：依赖关系仅由计算图的原始张量流动与直接算子边提取；若排除边界 COPY 收缩后引入了无法证明的附加依赖（`ambiguous` 依赖），或加入同核流水线次序弧后增广图出现环路，分析器均主动抛出 `UnsupportedBound` 异常退出；
4. **合法性范围声明**：该模块仅证明在给定次序下成功物理执行的完成时间下界，**并不构成**该调度方案满足官方全部编译依赖或硬件执行合法性的证明。

当方案通过上述守卫后，方案在任何一次成功的物理执行中，各算子的启动时刻必定受到一组必要时序不等式的严格约束：

1. **数据依赖不等式**：若算子 $u$ 与算子 $v$ 存在直接张量依赖或直接算子依赖，则 $v$ 的启动时刻满足：
   $$s_v \ge s_u + d_u + \delta_{uv}.$$
   其中，若 $u$ 与 $v$ 被分配到不同的计算核心，计入跨核心通信引发的硬件延迟 $\delta_{uv} = 500\text{ cycles}$（该数值对应冻结的 P3 官方配置）；若在同一核心，则 $\delta_{uv} = 0$。同一对算子间若存在多个并列依赖约束，系统取延迟的最大值（$\max$），不进行代数累加；
2. **同核同流水线 FIFO 约束**：在同一计算核心内部，分配给同一类执行流水线（如 `PIPE_M`）的各个算子必须按照调度方案排定的先后次序单串行推进执行。若在该核心的该流水线上算子 $u$ 紧排在算子 $v$ 之前，则必有：
   $$s_v \ge s_u + d_u.$$

依据上述必要不等式，记 $ES(v)$ 为算子 $v$ 的最早可能启动时刻。对于无前序约束的初始就绪算子，令其候选基准为 0；对于一般算子 $v$，其最早启动时刻严格满足拓扑动态规划式：

$$ES(v) = \max \left( \{0\} \cup \left\{ ES(u) + d_u + \delta_{uv} \ \middle|\ (u, v) \in \mathcal{E}_{\mathrm{bound}} \right\} \right).$$

整份方案的物理完成时间下界 $L(P)$ 定义为所有算子执行完成时刻的最大值（空图时取 0）：

$$L(P) = \begin{cases} \displaystyle \max_{v \in V} \bigl( ES(v) + d_v \bigr), & V \ne \emptyset, \\ 0, & V = \emptyset. \end{cases}$$

该下界完全由底层硬件执行的必要不等式推导得出。若当前系统已经取得了一份完成时间为 $U$ 的合法方案，且计算得出 $L(P) \ge U$，则该候选方案在实际执行中的 Makespan 必然满足 $M \ge L(P) \ge U$，绝不可能严格优于现有结果，从而可以被安全剪除。需要指出的是，该下界是必要约束界定的理论底线，并不宣称其数值必然等于消除外部瓶颈后实际可达的调度耗时；相较之下，任意放松约束后运行贪心启发式算法所得的耗时仅代表某一种可行排程的完成时间，并不构成理论下界。

## 算法步骤与复杂度分析

**算法3：问题三多核心协同调度算法（P3 Forest Solver）。**

```text
输入：原始计算图 G、计算核心数 K、官方硬件配置 config。
输出：合法的切分与调度方案 P = (node_to_subgraph, core_schedules)。
1. 初始化官方评测调用计数 calls = 0，评测上限 limit = 3；
2. 调用前序父求解器 witness_solve，在其内部依次尝试 calendar、pipeline 与 witness 策略：
     若产生合法方案且评测 Makespan 改善，更新当前最优解 winner 与当前耗时上界 U；
3. 检查评测账本：若 calls >= limit，直接返回当前 winner；
4. 检查计算图 G 是否满足归约森林结构守卫（连通分量 >= 2、无出度分叉、每算子单一确定尺寸输出、无直接计算依赖边等）：
     若不满足，安全捕获 UnsupportedStructure 异常，跳过后续构造，直接返回 winner；
5. 保持基准分量核心分配不变，提取各分量算子树，自底向上计算各节点 (h_u, r_u) 指标；
6. 汇聚节点处按 (h_i - r_i) 降序排定子树顺序，通过 DFS 后序遍历生成各分量执行序列；
7. 拼接生成候选调度方案 proposal，检查其唯一性：
     若 proposal 与 winner 方案完全一致，标记为 duplicate 并返回 winner；
8. 尝试构建 proposal 的依赖与流水线 FIFO 必要约束图，计算有向图最长路径下界 L(proposal)：
     若成功求得下界且 L(proposal) >= U：
         标记为 bound_pruned，省去评测，直接返回 winner；
     若抛出 UnsupportedBound 异常：
         记录 bound_unavailable，继续推进后续流程；
9. 发起官方离散事件仿真评测（calls = calls + 1）：
     若评测异常或未通过合法性检查，记录 rejected 并返回 winner；
     若评测成功且 Makespan < U：
         更新 winner = proposal，更新 U = Makespan；
10. 返回最终胜出的最佳方案 winner。
```

图 \ref{fig:p3-forest-decision} 完整呈现了问题三的树状排序准则与全流程候选方案的评测决策逻辑：
1. **树状排序的触发与适用限定**：排序机制仅作用于满足特定条件的归约子树结构（多棵互不交错的归约树且至少包含一处汇聚汇合节点、每个算子具有确定尺寸的单一输出、非根算子输出仅被唯一父算子消费）。对各子树计算指标差值 $h_i - r_i$（其中 $h_i$ 为子树内部结果的存储峰值字节数，$r_i$ 为子树完成后保留的输出字节数），按该差值降序排列处理同一父算子的子树，并在同值时按操作编号稳定决胜，随后执行父算子。在非交错树模型下，该规则使单棵树内部结果的存储峰值达到最小；需要强调的是，该性质仅是对该局部排序指标的理论保证，并不改变既定的分核归属，亦不直接推出官方评测 Makespan 缩短或缓存命中率提升；
2. **完整候选的评测决策链**：在求解流程中，所有候选方案共享至多 3 次在线 E0 评测预算。基础方案与注意力感知候选先行生成并确立当前最优解；针对新构造的树状排序方案，系统依次实施严格的前置检验：若已用评测次数达到 3 次，或无法构造合法的树状排序方案，或与当前最优方案编码完全相同，则直接跳过评测；
3. **理论下界过滤与严格改善**：若该方案满足下界构建条件且计算所得下界 $L(\text{proposal}) \ge U$，则断定其完成时间绝不可能超越当前最优值，直接作为 `bound_pruned` 剪除；若由于拓扑或算子类型导致下界不支持（`UnsupportedBound`），算法记录 `bound_unavailable` 并继续推进评测，绝不将无法证明的下界当作剪枝条件；仅当通过全部前置检验时，方调用官方 E0 进行最终评测，且仅在 Makespan 严格缩短时采纳该方案。

![树状分支排序准则与完整候选方案的评测决策流程。上部展示基于指标差值 $h_i - r_i$ 降序排定非交错子树执行顺序的判定条件与局部峰值最小化范围；下部展示共享至多 3 次在线 E0 评测预算下的结构合法性校验、去重检查、理论下界剪枝与严格 Makespan 改善择优决策链。](../figures/team-v5/p3-forest-decision.pdf){#fig:p3-forest-decision width=100%}

### 算法时间复杂度解耦分析

算法在求解过程中的计算耗时由以下几个相互独立的计算环节组成：

1. **森林识别与拓扑分析**：在无向连通分量与依赖拓扑提取中，对计算算子及连通分量的遍历耗时为 $O(V + E)$；
2. **自底向上指标递推与子树排序**：自叶向根递推计算各节点存储指标需 $O(V)$ 时间。在每个汇聚节点处对其子节点进行排序，设节点 $v$ 的入度（即前序子树数量）为 $\deg(v)$，全图排序的总时间复杂度为：
   $$O\left( \sum_{v \in V} \deg(v) \log \deg(v) \right) \le O(V \log V).$$
3. **深度优先后序遍历与方案拼接**：生成各分量 DFS 序列与拼接核心序列耗时为 $O(V)$；
4. **必要时序图最长路径求解**：若候选方案满足单操作 M/V 算子条件，构建包含 $V$ 个节点与 $E_{\mathrm{bound}}$ 条约束弧的有向无环图，利用拓扑排序计算最长路径的时间复杂度为 $O(V + E_{\mathrm{bound}})$；
5. **官方离散事件仿真评测开销**：在全流程至多 $b \le 3$ 次在线评测调用中，仿真耗时表示为 $\sum_{j=1}^b T_j$，其中 $T_j$ 取决于官方离散事件仿真器的内部模拟事件量。

需要明确说明的是，上述森林排序部分的复杂度界仅适用于该排序生成逻辑本身，并不包含外部全局 `Index` 索引构建、初始分量核心指派（`assignment`）以及官方底层编译与仿真评测的全局耗时，避免将整个求解流程错误归属为线性或低多项式复杂度。同时，评测次数上限为常数（$\le 3$）亦不构成全流程计算时间的代数证明，求解耗时的可控性根本上依赖于前置结构守卫与下界剪枝的配合。

## 启用和关闭共享缓存的配对实验

本文算法（Forest 固定版本，源码对应 Commit `311322b`）在官方提供的 100 张全量基准计算图、涵盖 1 至 5 核心的全部 500 种测试组合上进行了完整的端到端求解与评测，所有方案均顺利通过官方合法性校验。测试结果依据 `paper/manuscript-v1/data/all-results.csv` 与固定数据资产进行了严格复核。

在全量 500 个测试组合的求解过程中，求解器累计发起 973 次在线 E0 评测，未触发任何重试。与前一完整策略相比，全网格共有 24 个用例实现了 Makespan 的进一步缩短，其余 476 个用例持平，零退化（degrade = 0）。在额外数据搬运量（`extra_ddr_bytes`）与由于片上容量不足引发的搬运量（`spill_bytes`）方面，各有 18 个用例显著减少，479 个用例持平，3 个用例增加，两项统计指标均实现了 $413{,}450{,}240$ 字节的净减少。

为深入量化共享只读 Cache 对系统性能的实际影响，实验对同一套生成的 P3 最终方案分别在“关闭 Cache（无 L2）”与“开启 Cache”两种官方评测配置下进行了成对（paired）仿真对比。下表汇总了各核心数下的测试数据（注意：表中“无 L2”列代表同一份 P3 方案在关闭 Cache 时的表现，并非由问题二算法独立生成的方案）：

| 计算核心数量 | 无 L2：$\operatorname{mean}(B/M_2)$ | 开启 Cache：$\operatorname{mean}(B/M_3)$ | 成对加速比均值 $\operatorname{mean}(M_2/M_3)$ | 逐用例字节命中率算术平均 |
|---|---:|---:|---:|---:|
| 1 | 1.1971 | 1.1998 | 1.0023 | 6.47% |
| 2 | 2.2949 | 2.3120 | 1.0079 | 16.25% |
| 3 | 3.1745 | 3.2587 | 1.0314 | 25.96% |
| 4 | 3.9211 | 4.0915 | 1.0512 | 24.53% |
| 5 | 4.4763 | 4.7576 | 1.0829 | 31.36% |

表中数据展现了如下规律：

1. **Cache 带来的增益表现**：在 1 至 5 核心下，开启 Cache 后方案的平均加速比从无 Cache 时的 1.1971、2.2949、3.1745、3.9211 与 4.4763，分别提升至 1.1998、2.3120、3.2587、4.0915 以及 4.7576。逐用例成对加速比均值 $\operatorname{mean}(M_2/M_3)$ 在 5 核心场景下达到 1.0829；
2. **指标口径的精确区分**：表中第一、二列的分母基准 $B$ 均严格采用官方单核基准方案的 Makespan。第三列为逐用例计算 $M_2/M_3$ 后的算术平均值（$1.0829$），该数值在数学上并不等于两列均值的直接相除（$\frac{4.7576}{4.4763} \approx 1.0628$）；
3. **缓存命中率的统计差异**：在 5 核心场景下，逐用例字节命中率的算术平均值为 31.36%。若将全量 100 张图的全部访问请求汇总后统一计算，按整体访问字节加权的总字节命中率为 47.45%。两者差异源于不同计算图的通信规模不均，访问数据量庞大的计算图在加权统计中占据了更高比重；
4. **求解端到端耗时分布**：包含在线评测在内，求解程序在 500 个用例上的物理墙钟时间均值为 4.401 秒，中位数为 1.616 秒，95% 分位数（最近秩次法，第 475 位）为 20.009 秒，最大值为 51.335 秒。

::: figure-plan {#fig-p3-results}
使用500份固定最终方案的同方案成对数据，每个核心数量100对。两条曲线分别为逐图B/M2和B/M3的均值，另画逐图M2/M3均值。使用一个核心时保留实际比值。
:::

::: figure-plan {#fig-cache-gain}
完整保留500对结果：横轴为Cache字节命中率，纵轴为同一方案的M2/M3，包含小于1的点。不同核心数量用点形区分。只说明命中率不足以预测时间收益，不在没有事件证据时解释具体原因。
:::

## 附加比值选择条件的反例与消融（R9F）

为了探索能否通过在在线评测阶段增加多重评价指标以进一步优化 Cache 利用效果，前期研发中曾设计了一组附加筛选条件的对照实验（代码代号为 R9F）。

在 R9F 策略中，设计者对 5 核心的候选方案设置了三项必须同时满足的严格筛选准则：
1. 开启 Cache 后的完成时间严格缩短（$M_{3, \mathrm{new}} < M_{3, \mathrm{old}}$）；
2. 关闭 Cache 后的完成时间不退化（$M_{2, \mathrm{new}} \le M_{2, \mathrm{old}}$）；
3. Cache 带来的相对改善比值不下降，即 $G_{\mathrm{new}} \ge G_{\mathrm{old}}$，其中比值定义为 $G = \frac{M_2}{M_3}$。

在 5 核心的 100 张基准计算图中，96 张图由于不符合该策略的特定前置结构而跳过，1 张图被下界分析模块提前剪枝，其余 3 张图生成了候选方案并进入了在线评测。然而，这 3 张图生成的候选方案均因未能同时满足上述三项准则而被判定拒绝，最终 R9F 输出的 500 份方案与 Forest 主算法完全一致。

对这 3 张被拒绝用例的深层数据复核揭示了一个关键反例现象：这三份被拒绝的候选方案在实际执行中，**其实同时显著缩短了 $M_2$ 与 $M_3$**，具体数值如下表所示：

| 测试用例 / 核心数 | 原方案 $M_2$ / cycles | 候选方案 $M_2$ / cycles | 原方案 $M_3$ / cycles | 候选方案 $M_3$ / cycles |
|---|---:|---:|---:|---:|
| case_064 / 5 Core | 7,029 | 6,899 | 6,981 | 6,877 |
| case_068 / 5 Core | 131,631 | 98,913 | 116,345 | 97,971 |
| case_088 / 5 Core | 97,305 | 66,729 | 85,789 | 66,224 |

因为执行完成时间恒为正整数，准则 3 中要求的比值不下降条件可严格展开为代数乘积形式：

$$G_{\mathrm{new}} \ge G_{\mathrm{old}} \iff \frac{M_{2, \mathrm{new}}}{M_{3, \mathrm{new}}} \ge \frac{M_{2, \mathrm{old}}}{M_{3, \mathrm{old}}} \iff M_{2, \mathrm{new}} \cdot M_{3, \mathrm{old}} \ge M_{2, \mathrm{old}} \cdot M_{3, \mathrm{new}}.$$

以 `case_088` 为例，原方案的指标为 $M_2 = 97{,}305$ cycles，$M_3 = 85{,}789$ cycles，比值 $G_{\mathrm{old}} \approx 1.1342$。候选方案将无 Cache 时的完成时间大幅压缩至 $M_{2, \mathrm{new}} = 66{,}729$ cycles（缩短了 31.42%），同时将开启 Cache 时的完成时间压缩至 $M_{3, \mathrm{new}} = 66{,}224$ cycles（缩短了 22.81%）。由于无 Cache 场景下的优化幅度超越了有 Cache 场景下的优化幅度，导致新方案的比值下降为 $G_{\mathrm{new}} \approx 1.0076 < G_{\mathrm{old}}$。该比值准则因此直接判定该候选不合格并予以抛弃。

这一消融实验清楚地证明：在多目标多场景评估中，人为构造的复合比值指标容易产生与核心目标背离的掩盖效应，反而排除了在官方模拟中能够大幅缩短执行时间的优秀方案。本文主算法 Forest 坚持以官方规定的主口径 Makespan 严格单调下降作为唯一的接受准则，确保了优化方向始终紧密对准赛题的首要目标。
